; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-pcie.c_cvmx_pcie_config_read16.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/octeon-sdk/extr_cvmx-pcie.c_cvmx_pcie_config_read16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cvmx_pcie_config_read16(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %11, align 4
  %18 = call i64 @__cvmx_pcie_build_config_addr(i32 %13, i32 %14, i32 %15, i32 %16, i32 %17)
  store i64 %18, i64* %12, align 8
  %19 = load i64, i64* %12, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %5
  %22 = load i64, i64* %12, align 8
  %23 = call i32 @cvmx_read64_uint16(i64 %22)
  %24 = call i32 @cvmx_le16_to_cpu(i32 %23)
  store i32 %24, i32* %6, align 4
  br label %26

25:                                               ; preds = %5
  store i32 65535, i32* %6, align 4
  br label %26

26:                                               ; preds = %25, %21
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i64 @__cvmx_pcie_build_config_addr(i32, i32, i32, i32, i32) #1

declare dso_local i32 @cvmx_le16_to_cpu(i32) #1

declare dso_local i32 @cvmx_read64_uint16(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
